--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
     compile 'com.github.traex.rippleeffect:library:1.3'
+
+    compile 'com.github.Aspsine:MultiThreadDownload:920fd6f670'
+
 }
